integration_tests/codegen_fail/fail/union/attr_wrong_item.rs
use juniper::graphql_union;

#[graphql_union]
enum Character {}

fn main() {}
