integration_tests/codegen_fail/fail/union/attr_wrong_item.stderr
error: #[graphql_union] attribute is applicable to trait definitions only
 --> $DIR/attr_wrong_item.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
